--- a/src/components/RWS/Read/ReaderPad.module.css
+++ b/src/components/RWS/Read/ReaderPad.module.css
@@ -24,3 +24,31 @@
       );
     }
   }
+
+
+  /* scrollbar */
+  .scrollbar {
+    &,
+    &:hover {
+      background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+    }
+  
+    &[data-orientation='vertical'] .thumb {
+      background-color: var(--mantine-color-red-6);
+    }
+  
+    &[data-orientation='horizontal'] .thumb {
+      background-color: var(--mantine-color-blue-6);
+    }
+  }
+  
+  .corner {
+    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+    opacity: 1;
+  }
+
+  .ScrollArea {
+    border: 2px red white;
+  }
+
+
